[project]
name = "open-parkrun"
version = "0.1.0"
description = "A tool to fetch and save parkrun results as JSON files"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "beautifulsoup4",
    "flask",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py38"